--- a/css/style.scss
+++ b/css/style.scss
@@ -22,6 +22,7 @@
     position: absolute;
     top: 1rem;
     right: 2rem;
+    z-index: 99;
 
     > div {
         display: flex;
@@ -45,8 +46,8 @@
         }
 
         &.active {
-            color: orchid;
             text-decoration: underline;
+            color: #ff8aa4;
         }
     }
 }
@@ -55,7 +56,18 @@
     overflow: hidden;
     position: relative;
     width: 100%;
-    height: to_vw(333);
+    height: 26.6vw;
+
+    &.init {
+        .carousel-inner {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: fit-content;
+            margin: 0 auto;
+            gap: to_vw(10);
+        }
+    }
 }
 
 .carousel-inner {
@@ -69,27 +81,55 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    position: relative;
+    width: calc(20vw - to_vw(10));
     height: 100%;
-    transition: all 0.5s cubic-bezier(0.25, 0.1, 0.25, 1);
-    font-family: "AustinNewsDeckWeb", sans-serif;
-    font-weight: bold;
+
+    &.absolute {
+        position: absolute;
+        top: 50%;
+        transform: translateY(-50%);
+        height: 100%;
+    }
+
+    &.transition {
+        transition: left 0.5s cubic-bezier(0.25, 0.1, 0.25, 1), opacity 0.5s ease, visibility 0.5s ease;
+        opacity: 1;
+        visibility: visible;
+    }
 
     &.clone {
-        background: seashell;
+        opacity: 0;
+        visibility: hidden;
     }
 
     &.active {
-        background: #efebe9;
-        color: saddlebrown;
     }
 
     img {
+        display: block;
         width: 100%;
         height: 100%;
         object-fit: cover;
+        font-size: 0;
+    }
+
+    span {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: to_vw(40);
+        height: to_vw(20);
+        background: rgba(255, 255, 255, 0.2);
+        backdrop-filter: blur(3px);
+        z-index: 1;
+        font-family: "AustinNewsDeckWeb", sans-serif;
+        font-weight: bold;
+        color: #ff8aa4;
+        @include fontSize(12);
     }
 }
 
@@ -97,10 +137,18 @@
     display: flex;
     gap: to_vw(10);
 
+    &.disabled {
+        opacity: .3;
+
+        button {
+            cursor: not-allowed;
+        }
+    }
+
     button {
         font-family: "AustinNewsDeckWeb", sans-serif;
 
-        &:hover {
+        &:not(.disabled button):hover {
             text-decoration: underline;
         }
     }
